2015-06-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-222

	* src/groups.cc (define_wsv_group_names): Sort groups alphabetically.

	* src/m_jacobian.cc (jacobianDoitAddSpecies, jacobianDoit):

	Comment out names of unused arguments to silence compiler warning.

	* ChangeLog: Fix typo in previous entry.

2015-06-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-221

	* src/quantum.{cc,h}: Implementation of new class QuantumIdentifier.

	* src/groups.cc, src/xml_io_array_types.cc,
	src/xml_io_compound_types.cc, src/xml_io_instantiation.h,
	src/xml_io_types.h:

	Added new WSV groups QuantumIdentifier and ArrayOfQuantumIdentifier and
	XML read/write support.

	* src/linerecord.cc (ReadFromArtscat5Stream):

	Better error detection when parsing quantum numbers.

	* src/xml_io_private.h, src/xml_io.cc
	(parse_xml_tag_content_as_string): Added.

2015-06-04  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-220

	* CMakeLists.txt:

	Added workaround for detection of BLAS. Older cmake versions require
	fortran to be enabled for the FindBLAS macro to work. Therefore, for
	cmake < 2.8.8, fortran language support is now automatically turned on.

2015-06-03  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-219

	* src/CMakeLists.txt, CMakeLists.txt:

	Fix bug in BLAS detection reported by jana. Cmake did not fail when
	the required BLAS library wasn't found. Instead compilation failed
	trying to link against -lOFF.
	Moved code from src/ to toplevel CMakeLists.txt file and changed
	detection code to be consistent with other libraries.

	* README: Added blas to required dependencies.

2015-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-218

	* src/m_rte.cc (iyCalc, yCalc_mblock_loop_body): Changed asserts
	in last commit into runtime errors.

2015-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-217

	* src/m_rte.cc (iyCalc, yCalc_mblock_loop_body): iy resp. y now
	asserted to not contain any NaN.
